# old-pdf-langchain

./: README.md  main.py  pyproject.toml
scripts/: conda_export_env.py
src/: __init__.py  __main__.py  app.py  client.py  model.py  pdf_.py  prompt.py
src/application/: azd.py
src/application/front/: chat.py  file_viewer.py  pdf_viewer.py
